# FILP

./: CMakeLists.txt  README.md
allocator/: .main.cpp.swp  CMakeLists.txt  a.out  allocator.h  main.cpp
asan/: CMakeCache.txt  cmake_install.cmake  compile_commands.json  statistic.txt  word-counter
asan/word_counter/: cmake_install.cmake
word_counter/: CMakeLists.txt  main.cpp
